<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".register">

    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="100dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_width="204dp"
        android:layout_height="142dp"
        android:alpha="1"
        android:contentDescription="@string/descrip_logo"
        android:src="@drawable/logo_white"
        android:visibility="visible" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"

        >


        <EditText
            android:id="@+id/edt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:hint="@string/input_correo"
            android:textColorHighlight="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="145dp"
            android:ems="10"
            android:textColorHighlight="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:hint="@string/input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />



        <EditText
            android:id="@+id/edt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:textColorHighlight="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:hint="@string/input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/botonredondo"

            android:text="@string/boton_regis"
            android:textColor="@android:color/white" />


        <ImageButton
            android:id="@+id/imageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gmail"
            android:background="#000000"
            android:layout_marginTop="280dp"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:contentDescription="@string/descrip_go"/>

        <ImageButton
            android:id="@+id/imageBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/facebook"
            android:background="#000000"
            android:layout_marginTop="280dp"
            android:layout_marginStart="310dp"
            android:layout_marginLeft="310dp"
            android:contentDescription="@string/descrip_fb"
            />


    </RelativeLayout>


</RelativeLayout>